# Programmable-Signal-Generator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  codecov.yml  requirements.txt
.chglog/: config.yml
.github/actions/cpp-toolchain/: action.yml
.github/actions/py-toolchain/: action.yml
.github/workflows/: ci.yml
data/: analogSignal.txt  digitalSignal.txt  testSignal.txt
docs/: ARCHITECTURE.md  BUILD.md  COMPATIBILITY.md  MATH.md  TESTING.md
inc/: complexMixer.h  dac.h  dsp.h  firFilter.h  interpolator.h  signalGenerator.h  utils.h
reports/: index.html  style.css
reports/pipeline/: analog_nrz.html  analog_rf.html  input.html  interpolated.html  shifted_nrz.html  shifted_rf.html
src/cpp/: complexMixer.cpp  dac.cpp  dsp.cpp  firFilter.cpp  interpolator.cpp  main.cpp  signalGenerator.cpp  utils.cpp
src/python/: complex_mixer.py  dac.py  fir_filter.py  interpolator.py  main.py  signal_generator.py
tests/: CMakeLists.txt
tests/cpp/: test_complexMixer.cpp  test_dac.cpp  test_dsp.cpp  test_firFilter.cpp  test_interpolator.cpp  test_utils.cpp
tests/cpp/integration/: testDac.cpp  testInterpolator.cpp  testSignalGenerator.cpp
tests/cpp/unit/: testUnitComplexMixer.cpp  testUnitDac.cpp  testUnitDsp.cpp  testUnitFirFilter.cpp  testUnitInterpolator.cpp  testUnitUtils.cpp
tests/python/: test_complex_mixer.py  test_dac.py  test_fir_filter.py  test_interpolator.py
tests/python/integration/: test_dac.py  test_interpolator.py  test_signal_generator.py
tests/python/unit/: test_unit_complex_mixer.py  test_unit_dac.py  test_unit_fir_filter.py  test_unit_interpolator.py
